# exa-crewai

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  .vale.ini  README.md  mypy.ini  pyproject.toml  ruff.toml  test.html
logs/: 2024-05-09_18-28-35_edit_task.md  2024-05-09_18-28-35_newsletter_task.html  2024-05-09_18-28-35_research_task.md
src/gui/: app.py
src/newsletter_gen/: crew.py  main.py
src/newsletter_gen/config/: agents.yaml  newsletter_template.html  tasks.yaml
src/newsletter_gen/tools/: research.py
