[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = "newsletter-gen using crewAI"
name = "newsletter_gen"
version = "0.1.0"

[tool.poetry.dependencies]
crewai = {extras = ["tools"], version = "*"}
exa-py = "*"
langchain = "*"
langchain-anthropic = "*"
langchain-core = "*"
langchain-google-genai = "*"
langchain-groq = "*"
langchain-openai = "*"
pillow = "*"
python = ">=3.10,<=3.13"
pyyaml = "^6.0.1"
streamlit = "*"
watchdog = "^4.0.1"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.1"

[tool.poetry.scripts]
newsletter_gen = "newsletter_gen.main:run"
